--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/activecm/rita-v2            
+            ghcr.io/activecm/rita   
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
