--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ networks:
   rita-network: {}
 services:
   rita:
-    image: ghcr.io/activecm/rita-v2:latest
+    image: ghcr.io/activecm/rita:latest
     build: .
     depends_on:
       - clickhouse
