Update action workflows
Co-Authored-By: Liza Tsibur <liza@activecountermeasures.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ on:
         - completed
 
 jobs:
-  upload:
+  upload-installer:
     name: Upload Artifacts
     runs-on: ubuntu-22.04
     steps:
