--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            files: rita-${{ github.ref_name }}.tar.gz
+            files: installer/rita-${{ github.ref_name }}.tar.gz
