--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ on:
       #- deleted
       - prereleased
       - released
+  push:
+    tags:
+      - '*'
 
   workflow_run:
     workflows: ["Build Docker Images"]
