Update first seen scoring for non-rolling datasets
Co-Authored-By: Liza Tsibur <liza@activecountermeasures.com>

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ CONFIG_DIR=./deployment
 CONFIG_FILE=./config.hjson
 SYSLOG_ADDRESS=localhost:514
 DB_ADDRESS=localhost:9000
+LOGGING_ENABLED=true
+LOG_LEVEL=1
