--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /installer/stage
 /installer/rita-*.tar.gz
 /installer/rita-*
+/installer/install-rita-zeek-here.sh
 !/installer/*.md
 
 # only commit .env, .env.production, and test.env files
