--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ CONFIG_DIR=./deployment
 CONFIG_FILE=./config.hjson
 SYSLOG_ADDRESS=localhost:514
 DB_ADDRESS=localhost:9000
-DB_USERNAME=default
-DB_PASSWORD=
+CLICKHOUSE_USERNAME=default
+CLICKHOUSE_PASSWORD=
 LOGGING_ENABLED=true
 LOG_LEVEL=1
 
