--- a/installer/install_scripts/install_pre.yml
+++ b/installer/install_scripts/install_pre.yml
@@ -1,6 +1,6 @@
 ---
 # ansible install playbook that does the prep work for rita V2.
-# Version: 202408061413
+# Version: 202504081445
 # sample runs:
 # 	Optional: Add the following block, without #'s  to /etc/ansible/hosts (or /opt/local/etc/ansible/hosts if using ansible on mac with mac ports).
 # The hosts must each be on their own line.  These can be full or short hostnames or a name following "Host" in ~/.ssh/config .
@@ -23,6 +23,15 @@
 
   vars:
     ansible_python_interpreter: /bin/python3							# Centos 7 defaults to using python2, so we force python 3.  This change does not break any other distros
+
+  #The following variables are populated by adding these variables and their values after "-e" on the ansible-playbook command line.  Example:
+  #ansible-playbook -K -i "ro810,ub2404," -e "ANS_HTTP_PROXY=http://yourproxy:port ANS_HTTPS_PROXY=http://yourproxy:port NO_PROXY=localhost,127.0.0.1,db,logger install_hosts=ro810,ub2404," install_pre.yml
+  environment:
+    HTTP_PROXY: "{{ ANS_HTTP_PROXY }}"
+    HTTPS_PROXY: "{{ ANS_HTTPS_PROXY }}"
+    http_proxy: "{{ ANS_HTTP_PROXY }}"
+    https_proxy: "{{ ANS_HTTPS_PROXY }}"
+    NO_PROXY: "{{ NO_PROXY }}"
 
 #Early tasks needed to support the rest of the install
   pre_tasks:
@@ -74,6 +83,20 @@
       when: selinuxenforce_check.stat.exists
       tags:
         - linux
+
+#Teach apt how to use a proxy
+    #Must precede "name: Start AC-Hunter"
+    - name: Add proxy environment variable to /etc/apt/apt.conf file
+      lineinfile:
+        path: /etc/apt/apt.conf
+        line: 'Acquire::http::Proxy "{{ ANS_HTTP_PROXY }}";'
+        insertafter: EOF
+        create: yes
+      tags:
+        - linux
+        - linuxdeb
+      when: ( ansible_distribution == 'Debian' or ansible_distribution == 'Kali' or ansible_distribution == 'Pop!_OS' or ansible_distribution == 'Ubuntu' or ansible_distribution == 'Zorin OS' )
+
 
 #Add tools needed by later stages
     # Provides "needs-restarting" for ansible's ability to manage rebooting after patching
@@ -439,7 +462,7 @@
 
     - name: "RITA Pre: replace python3-requests with a new version installed by pip."
       block:
-        - name: "RITA Pre: Uninstall unofficial docker packages on rpm-based distributions."
+        - name: "RITA Pre: Uninstall python3-requests on rpm-based distributions."
           yum:
             name:
               - python3-requests								#As of 20240618, issue with requests code: "Error connecting: Error while fetching server API version: Not supported URL scheme http+docker".  Installing requests with pip appears to install a newer version that handles the issue.
