--- a/installer/install_scripts/install_pre.yml
+++ b/installer/install_scripts/install_pre.yml
@@ -497,3 +497,22 @@
         - linux
         - linuxdeb
         - linuxrpm
+
+    #This keypair will be used for all transfers between all zeek sensors and all achunter systems.
+    #Note that if there's an existing key it will not be overwritten.  Keypair will be placed in the playbook directory.
+    #Note: formerly used {{ playbook_dir }}
+    - name: "RITA Pre: Generate ssh keypair for log transfers"
+      local_action:
+        module: "user"
+        name: "{{ lookup('env','USER') }}"
+        generate_ssh_key: true
+        ssh_key_type: "rsa"
+        ssh_key_bits: 4096
+        ssh_key_file: "{{ lookup('env', 'PWD') }}/id_rsa_dataimport"
+      tags:
+        - docker
+        - linux
+        - linuxdeb
+        - linuxrpm
+
+
